--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
     <section class="cta">
       <h1>Enroll For Various Services <br>Anywhere from the world </h1>
-      <a href="" class="hero-btn">CONTACT US</a>
+      <a href="contact.html" class="hero-btn">CONTACT US</a>
     
     </section>
     <section class="footer">
