--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="text-box">
         <h1>YOU DREAM WE CREATE</h1>
         <p>Royal Consultants Architects Engineers offers a wide range of customized services for various scales of projects.<br> Each new project is assessed to provide services that best suit your project's needs and your budget. </p>
-        <a href="#" class="hero-btn">Visit Us to Know More</a>
+        <a href="https://goo.gl/maps/VohZG3FU2jrzauaE7" class="hero-btn">Visit Us to Know More</a>
       </div>
     </section>
     
