--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
           <h1>WHO WE ARE</h1>
           <p>Royal Consultants is grounded in providing a high-level of service from project conception through project completion.  With a client centered approach, we work diligently to design well-crafted architecture that aligns with both the clients’ needs and stylistic preferences, as well as complimenting the building’s natural environment.</p>
           <br><p>Personalization through the process and in the design-details is a key to our project’s success.  We work closely with our clients from the project’s conception until you move in.  A team approach is encouraged.  From working closely with builders, interior designers, landscape architects and other craftsman and designers, we work toward the ultimate goal of a thoughtfully designed house for you to call home.  We are here to help guide you through the process and make it as a seamless endeavor as possible.</p>
-          <br><p>Aasif Khatri was born and raised in Dabhoi.  Experienced Architect with a demonstrated history of working in the architecture & planning industry. Skilled in AutoCAD, Construction, Sustainable Design, Civil Litigation, and Architectural Design.   Since his return he has continued providing a high level of service and design for projects throughout the Chhota Udeour district.</p>
+          <br><p>Aasif Khatri was born and raised in Vadodara.  Experienced Architect with a demonstrated history of working in the architecture & planning industry. Skilled in AutoCAD, Construction, Sustainable Design, Civil Litigation, and Architectural Design.   Since his return he has continued providing a high level of service and design for projects throughout the Chhota Udeour district.</p>
           <br><p>Royal Consultants is a Vadodara based studio with architectural licenses in Vadodara.  Aasif Khatri is NCARB certified, which grants license reciprocity in other states.
 
           </p>
-          <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+          <a href="index.html" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
        
       </div>
