--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1>Services We Offer</h1>
           <p style="white-space:pre-wrap ;">All projects begin with an initial design consultation. This 1 to 2 hour meeting discusses your design vision, your project goals and the general budget you have in mind. We then talk about the best possible approach and the services required for your project’s specific needs.</p>
 
-          <br><p style="white-space: pre-wrap;">Royal Consultants Architects Engineers encourages a holistic approach to the design and construction process; offering full architectural and architectural interior services. With this approach, Royal Consultants is integral from the initial conceptual design. Working to foster dialogue and coordination with the builder and all the design consultants, Roya; consultants strives to produce a highly coordinated and detailed set of construction drawings and specifications. RA+D will continue to provide support through project pricing and the entire construction of your project until the day you move in.</p>
+          <br><p style="white-space: pre-wrap;">Royal Consultants Architects Engineers encourages a holistic approach to the design and construction process; offering full architectural and architectural interior services. With this approach, Royal Consultants is integral from the initial conceptual design. Working to foster dialogue and coordination with the builder and all the design consultants, Roya; consultants strives to produce a highly coordinated and detailed set of construction drawings and specifications. Royal consultants will continue to provide support through project pricing and the entire construction of your project until the day you move in.</p>
 
           <br><p style="white-space: pre-wrap;">Focused on being a custom architecture + design studio, services also have the ability to be customized. Royal Consultants Architects Engineers recognizes that full architectural services are sometimes beyond your project’s needs and therefore tailored a la carte services are available.
         </p>
@@ -144,10 +144,9 @@
           </div>
         </div>
         <div class="testimonials-col">
-          <img src="images/royal5.jpg">
+          <img src="images/zakir1.jpg">
           <div>
-            <p>"Working with Royal Consultants was an absolute pleasure. From the very beginning, they took the time to understand our vision and needs for our home renovation project. Their team was incredibly professional, responsive, and always went above and beyond to ensure that our project was completed on time and within budget. We were blown away by the final result and couldn't be happier. We highly recommend them to anyone looking for a top-notch architecture firm."
-            </p>
+            <p>"I am incredibly pleased with the design and layout of my dental clinic, which was expertly crafted by my architect. The functionality and flow of the space have exceeded my expectations, and my patients are constantly commenting on the welcoming atmosphere. The attention to detail and commitment to excellence exhibited by the architectural team was truly exceptional, and I am grateful for the outstanding work they have done in bringing my vision to life."</p>
             <h3>DR ZAKIR MEMON</h3>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -159,7 +158,7 @@
         <div class="testimonials-col">
           <img src="images/irfan2.jpg">
           <div>
-            <p>"I recently had the pleasure of working with Royal Consultants on the construction of my new home and I could not be happier with the results. From start to finish, the team was professional, knowledgeable, and attentive to every detail. They took the time to understand my vision and made it a reality, while also offering valuable insights and ideas along the way. I highly recommend [Firm Name] to anyone in need of an architecture firm that is both creative and reliable."
+            <p>"I recently had the pleasure of working with Royal Consultants on the construction of my new home and I could not be happier with the results. From start to finish, the team was professional, knowledgeable, and attentive to every detail. They took the time to understand my vision and made it a reality, while also offering valuable insights and ideas along the way. I highly recommend Royal Consultants to anyone in need of an architecture firm that is both creative and reliable."
             </p>
             <h3>DR IRFAN KHATRI</h3>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -195,9 +194,9 @@
         </div>
         <div class="footer-links">
           <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
           <a href="services.html">Services</a>
           <a href="project.html">Projects</a>
-          <a href="about.html">About Us</a>
           <a href="contact.html">Contact Us</a>
         </div>
       </div>
