--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
         
       </div>
       <div class="project-description">
-        <p>Dr. Memon's dental office is a spacious and modern facility designed to provide patients with a comfortable and welcoming environment. Our team worked closely with Dr. Memon to create a space that is both functional and aesthetically pleasing. The office features state-of-the-art equipment, private treatment rooms, and a calming waiting area. We also incorporated natural light and soothing colors to promote a sense of relaxation and wellness. With our attention to detail and commitment to quality, we were able to create a space that meets Dr. Memon's needs and exceeds the expectations of his patients.</p>
+        <p>Dr. Memon's dental office is a spacious and modern facility designed to provide patients with a comfortable and welcoming environment. Our team worked closely with Dr. Memon to create a space that is both functional and aesthetically pleasing. The Dental clinic features state-of-the-art equipment, private treatment rooms, and a calming VIP waiting  area. We also incorporated natural light and soothing colors to promote a sense of relaxation and wellness. With our attention to detail and commitment to quality, we were able to create a space that meets Dr. Memon's needs and exceeds the expectations of his patients.</p>
       </div>
       <div class="work1-col">
         <img src="images/royal3.jpg">
@@ -61,7 +61,7 @@
       <div class="work1-col">
         <img src="images/royal4.jpg">
         <div class="layer1">
-          <h3>MR.IRFAN KHATRI</h3>
+          <h3>DR.IRFAN KHATRI</h3>
         </div>
         
       </div>
