--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="services.html">SERVICES</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="PROJECTS.html">PROJECTS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
@@ -196,7 +196,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="services.html">Services</a>
-          <a href="project.html">Projects</a>
+          <a href="PROJECTS.html">Projects</a>
           <a href="contact.html">Contact Us</a>
         </div>
       </div>
