--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -77,14 +77,20 @@
                     <a href="project6.html">
                         <img src="images/Tulsi Gate.png">
                     </a>
-                    <h3>Tulsi Gate</h3>
+                    <h3>TULSI RESIDENCY</h3>
                 </div>
                 <div class="project-item">
                     <a href="project7.html">
                         <img src="images/tulse.jpg">
 
                     </a>
-                    <h3>Tulsi Club</h3>
+                    <h3>TULSI CLUB</h3>
+                </div>
+                <div class="project-item">
+                    <a href="project8.html">
+                        <img src="images/gurukrupa.jpg">
+                    </a>
+                    <h3>GURUKRUPA SOCIETY</h3>
                 </div>
              
                 
@@ -100,12 +106,12 @@
               </div> 
 
     </section>
-    <section class="footer">
+    <footer class="footer">
         <div class="container">
           <h4>CONNECT WITH US ON SOCIAL MEDIA</h4>
           <p>We'd love to hear from you! Whether you have a question about our services, want to discuss a potential project, or just want to say hello, feel free to reach out to us using the form below. Our team of experienced architects and designers is always here to help you with any of your design needs. We are committed to providing personalized, high-quality service to each and every one of our clients. Don't hesitate to contact us today to see how we can help you achieve your design goals.</p>
           <div class="social-icons">
-            <a href="https://www.facebook.com/your-page">
+            <a href="https://www.facebook.com/royalconsultantsae?mibextid=LQQJ4d">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="https://youtube.com/@ArchitectAasif">
