--- a/project6.html
+++ b/project6.html
@@ -32,15 +32,15 @@
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
   </nav>
-  <h1>"Welcome to Tulsi Gate: Where Luxury Meets Serenity"
+  <h1>"Welcome to Tulsi Residency: Where Luxury Meets Serenity"
   </h1>
 </section>
 <div class="project-description">
   <img src="images/Tulsi Gate.png" alt="Project 6">
 
-  <h2>Tulsi Gate</h2>
+  <h2>Tulsi Residency</h2>
 
- <p>"Tulsi Gate is a prestigious residential project that showcases architectural excellence and modern living at its finest. Situated in a prime location, this gated community offers a perfect blend of convenience, comfort, and luxury.<br>
+ <p>"Tulsi Residency is a prestigious residential project that showcases architectural excellence and modern living at its finest. Situated in a prime location, this gated community offers a perfect blend of convenience, comfort, and luxury.<br>
 
   <br>The design of Tulsi Gate embraces contemporary aesthetics while keeping functionality in mind. The spacious apartments and villas are thoughtfully designed to provide ample natural light, ventilation, and privacy. The interiors boast high-quality finishes, premium fixtures, and meticulous attention to detail, creating an atmosphere of elegance and sophistication.<br>
   
@@ -56,7 +56,7 @@
       <h4>CONNECT WITH US ON SOCIAL MEDIA</h4>
       <p>We'd love to hear from you! Whether you have a question about our services, want to discuss a potential project, or just want to say hello, feel free to reach out to us using the form below. Our team of experienced architects and designers is always here to help you with any of your design needs. We are committed to providing personalized, high-quality service to each and every one of our clients. Don't hesitate to contact us today to see how we can help you achieve your design goals.</p>
       <div class="social-icons">
-        <a href="https://www.facebook.com/your-page">
+        <a href="https://www.facebook.com/royalconsultantsae?mibextid=LQQJ4d">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
         <a href="https://youtube.com/@ArchitectAasif">
