--- a/PROJECT1.html
+++ b/PROJECT1.html
@@ -39,6 +39,7 @@
 <div class="project-description">
   <img src="images/royal1.jpg" alt="Project 1">
   <h2>DR.ZAKIR MEMON DENTAL CLINIC</h2>
+  
   <p>Dr. Zakir Memon's dental clinic is a state-of-the-art facility designed to provide patients with the highest quality dental care in a comfortable and relaxing environment. The clinic is equipped with the latest technology and staffed by a team of highly trained professionals who are committed to helping patients achieve and maintain optimal oral health.</p>
 <br><p>From routine cleanings and checkups to complex restorative and cosmetic procedures, the clinic offers a full range of dental services to meet the needs of patients of all ages. Whether you're in need of a simple filling or a complete smile makeover, the team at Dr. Zakir Memon's dental clinic can help you achieve the healthy, beautiful smile you deserve.</p>
 <br><p>At Dr. Zakir Memon's dental clinic, patient satisfaction is the top priority. The clinic's friendly and knowledgeable staff work hard to ensure that each patient has a positive experience and receives the care and attention they need to achieve their dental goals. With a commitment to excellence in every aspect of care, Dr. Zakir Memon's dental clinic is the premier choice for dental care in the area.</p>
@@ -58,7 +59,7 @@
           <a href="https://youtube.com/@ArchitectAasif">
             <i class="fa fa-youtube"></i>
           </a>
-          <a href="https://instagram.com/royal.consultants_ae?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+          <a href="https://www.instagram.com/architectaasif/"><i class="fa fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aasif-khatri-09b6859b"><i class="fa fa-linkedin"></i></a>
         </div>
   
