--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -41,7 +41,7 @@
         <div class="gallery">
             <div class="project-gallery">
                 <div class="project-item">
-                    <a href="project1.html">
+                    <a href="PROJECT1.html">
                         <img src="images/royal1.jpg" alt="Project 1">
                     </a>
                     <h3>DR.ZAKIR MEMON</h3>
@@ -117,7 +117,7 @@
             <a href="https://youtube.com/@ArchitectAasif">
               <i class="fa fa-youtube"></i>
             </a>
-            <a href="https://instagram.com/royal.consultants_ae?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+            <a href="https://www.instagram.com/architectaasif/"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/aasif-khatri-09b6859b"><i class="fa fa-linkedin"></i></a>
           </div>
           
