--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
           <a href="https://youtube.com/@ArchitectAasif">
             <i class="fa fa-youtube"></i>
           </a>
-          <a href="https://instagram.com/royal.consultants_ae?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+          <a href="https://www.instagram.com/architectaasif/"><i class="fa fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aasif-khatri-09b6859b"><i class="fa fa-linkedin"></i></a>
         </div>
         
