--- a/project7.html
+++ b/project7.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PROJECTS- Royal Consultants</title>
+    <title>TULSI CLUB- Royal Consultants</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +66,7 @@
         <a href="https://youtube.com/@ArchitectAasif">
           <i class="fa fa-youtube"></i>
         </a>
-        <a href="https://instagram.com/royal.consultants_ae?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+        <a href="https://www.instagram.com/architectaasif/"><i class="fa fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/aasif-khatri-09b6859b"><i class="fa fa-linkedin"></i></a>
       </div>
       
